--- a/NCLGeneralFramework/zh-Hans.lproj/InfoPlist.strings
+++ b/NCLGeneralFramework/zh-Hans.lproj/InfoPlist.strings
@@ -5,4 +5,4 @@
   Created by ioi on 16/7/26.
   Copyright © 2016年 ncl. All rights reserved.
 */
-"CFBundleDisplayName" = "中文名字";
+"CFBundleDisplayName" = "财神";
